material-design: Fix disappearing scrollbar in Firefox

--- a/plugins/theme/themes/MaterialDesign/style.css
+++ b/plugins/theme/themes/MaterialDesign/style.css
@@ -737,6 +737,12 @@ div#tdcont
 	padding:0
 }
 
+table#maincont td.uicell {
+  overflow: hidden;
+  padding: 0;
+  vertical-align: top;
+}
+
 div#HDivider
 {
 	background:#141414;
